[package]
name = "learn-rust"
version = "0.3.0"
authors = ["BirukAfework"]
edition = "2018"
description = "Rust project example"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nicolas-Ferre/rust-example"
readme = "./README.md"
keywords = ["rust", "example", "project", "lib"]
categories = ["development-tools"]

[dependencies]
is-odd = "1.0"
